--- a/css/main.css
+++ b/css/main.css
@@ -15,21 +15,146 @@ html {
 body {
   font-family: 'Titillium Web', sans-serif;
   font-size: 1.6rem;
-  background-color: aqua;
 }
 
-.button {
+.burger-btn {
   position: fixed;
-  padding: 1em;
   top: 20px;
   right: 20px;
-  background-color: grey;
+  padding: 1em;
+  background-color: white;
   border: 1px solid black;
+  border-radius: 8px;
   cursor: pointer;
-  z-index: 1000;
+  z-index: 100;
 }
 
-.nav__line {
-  display: none;
+.burger-btn:focus {
+  outline: none;
+}
+
+.burger-btn:hover .burger-btn__bars::after,
+.burger-btn:hover .burger-btn__bars::before {
+  width: 100%;
+}
+
+.burger-btn__box {
+  position: relative;
+  width: 40px;
+  height: 30px;
+}
+
+.burger-btn__bars, .burger-btn__bars::after, .burger-btn__bars::before {
+  position: absolute;
+  right: 0;
+  height: 3px;
+  content: '';
+  -webkit-transition: width 0.3s;
+  transition: width 0.3s;
+  background-color: black;
+}
+
+.burger-btn__bars {
+  width: 100%;
+}
+
+.burger-btn__bars::after {
+  top: 13px;
+  width: 60%;
+}
+
+.burger-btn__bars::before {
+  top: 27px;
+  width: 30%;
+  -webkit-transition: width 0.3s 0.1s;
+  transition: width 0.3s 0.1s;
+}
+
+.nav {
+  position: fixed;
+  top: 105px;
+  width: 100%;
+  z-index: 5;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  background-color: white;
+}
+
+.nav__items {
+  padding: 1rem 2rem;
+}
+
+.nav__item {
+  position: relative;
+  text-decoration: none;
+  margin: 0  1rem;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#dad9d9), color-stop(white), color-stop(white), color-stop(#dfdede), to(grey));
+  background-image: linear-gradient(#dad9d9, white, white, #dfdede, grey);
+  color: black;
+  font-size: 2rem;
+}
+
+.nav__item::before {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: -10px;
+  width: 10px;
+  height: 100%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#dad9d9), color-stop(white), color-stop(white), color-stop(#dfdede), to(grey));
+  background-image: linear-gradient(#dad9d9, white, white, #dfdede, grey);
+  z-index: 0;
+}
+
+.nav__item::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  right: -10px;
+  width: 10px;
+  height: 100%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#dad9d9), color-stop(white), color-stop(white), color-stop(#dfdede), to(grey));
+  background-image: linear-gradient(#dad9d9, white, white, #dfdede, grey);
+  z-index: 0;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100px;
+  line-height: 100px;
+  color: white;
+  background-color: black;
+  z-index: 4;
+}
+
+.header__hero-img p {
+  position: absolute;
+  left: 20px;
+  font-size: 7rem;
+}
+
+.header__hero-title {
+  text-align: center;
+  font-size: 6rem;
+  letter-spacing: 3px;
+}
+
+.header__hero-title span {
+  font-size: 3rem;
+}
+
+section {
+  position: relative;
+  height: 500px;
+  background-color: yellow;
+}
+
+.two {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  background-color: green;
 }
 /*# sourceMappingURL=main.css.map */
