--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,26 +12,160 @@ html {
 }
 
 body {
-
 	font-family: 'Titillium Web', sans-serif;
 	font-size: 1.6rem;
-background-color: aqua;
 }
 
 // NAV
-.button {
-    position: fixed;
-    padding: 1em;
+.burger-btn {
+	position: fixed;
 	top: 20px;
 	right: 20px;
-	background-color: grey;
-    border: 1px solid black;
+	padding: 1em;
+	background-color: white;
+	border: 1px solid black;
+	border-radius: 8px;
+	// overflow: hidden;
 	cursor: pointer;
-	z-index: 1000;
+	z-index: 100;
+
+	&:focus {
+		outline: none;
+		// border: 1px solid rgba(255, 255, 255, 0.5);
+	}
+
+	&:hover {
+		.burger-btn__bars::after,
+		.burger-btn__bars::before {
+			width: 100%;
+		}
+	}
+
+	&__box {
+		position: relative;
+		width: 40px;
+		height: 30px;
+	}
+
+	&__bars,
+	&__bars::after,
+	&__bars::before {
+		position: absolute;
+		right: 0;
+		height: 3px;
+		content: '';
+		// background-color: rgb(248, 245, 245);
+		transition: width 0.3s;
+		background-color: rgb(0, 0, 0);
+	}
+
+	&__bars {
+		width: 100%;
+		&::after {
+			top: 13px;
+			width: 60%;
+		}
+		&::before {
+			top: 27px;
+			width: 30%;
+			transition: width 0.3s 0.1s;
+		}
+	}
 }
 
 .nav {
-	&__line {
-		display: none;
+	position: fixed;
+	top: 105px;
+	width: 100%;
+	z-index: 5;
+	border-top: 2px solid black;
+	border-bottom: 2px solid black;
+	background-color: white;
+	&__items {
+		// position: relative;
+		// display: flex;
+		// width: 300px;
+		padding: 1rem 2rem;
+		// justify-content: space-between;
+	}
+
+	&__item {
+		position: relative;
+		text-decoration: none;
+		margin: 0  1rem;
+		background-image: linear-gradient( rgb(218, 217, 217), white, white,rgb(223, 222, 222), grey);
+		color: black;
+		font-size: 2rem;
+	}
+
+	&__item::before {
+		position: absolute;
+		content: '';
+		top: 0;
+		left: -10px;
+		width: 10px;
+		height: 100%;
+		background-image: linear-gradient( rgb(218, 217, 217), white, white,rgb(223, 222, 222), grey);
+		z-index: 0;
+	}
+	&__item::after {
+		position: absolute;
+		content: '';
+		top: 0;
+		right: -10px;
+		width: 10px;
+		height: 100%;
+		background-image: linear-gradient( rgb(218, 217, 217), white, white,rgb(223, 222, 222), grey);
+		z-index: 0;
 	}
 }
+
+.header {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 100px;
+	line-height: 100px;
+	
+	color: white;
+	background-color: rgb(0, 0, 0);
+	z-index: 4;
+	&__hero-img{
+		// position: absolute;
+		// display: flex;
+		p{
+		position: absolute;
+		left: 20px;
+		font-size: 7rem;
+			
+		}
+	}
+	&__hero-title{
+		// justify-content: center;
+		text-align: center;
+		font-size: 6rem;
+		letter-spacing: 3px;
+		span {
+			font-size: 3rem;
+		}
+
+	}
+}
+
+
+
+section {
+	// top: 200px;
+	position: relative;
+	height: 500px;
+	background-color: yellow;
+}
+
+.two {
+	position: relative;
+	width: 100%;
+	height: 500px;
+	background-color: green;
+}
+
+
