--- a/css/main.css
+++ b/css/main.css
@@ -84,38 +84,60 @@ body {
   padding: 1rem 2rem;
 }
 
+.nav__items span {
+  -webkit-transition: font-weight .5s;
+  transition: font-weight .5s;
+  text-transform: capitalize;
+}
+
 .nav__item {
   position: relative;
   text-decoration: none;
-  margin: 0  1rem;
+  margin: 0 1rem;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#dad9d9), color-stop(white), color-stop(white), color-stop(#dfdede), to(grey));
   background-image: linear-gradient(#dad9d9, white, white, #dfdede, grey);
   color: black;
   font-size: 2rem;
 }
 
+.nav__item:hover span {
+  font-weight: bold;
+}
+
 .nav__item::before {
+  left: -10px;
   position: absolute;
   content: '';
   top: 0;
-  left: -10px;
   width: 10px;
   height: 100%;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#dad9d9), color-stop(white), color-stop(white), color-stop(#dfdede), to(grey));
   background-image: linear-gradient(#dad9d9, white, white, #dfdede, grey);
-  z-index: 0;
+  -webkit-transition: width .3s, left .3s;
+  transition: width .3s, left .3s;
 }
 
 .nav__item::after {
+  right: -10px;
   position: absolute;
   content: '';
   top: 0;
-  right: -10px;
   width: 10px;
   height: 100%;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#dad9d9), color-stop(white), color-stop(white), color-stop(#dfdede), to(grey));
   background-image: linear-gradient(#dad9d9, white, white, #dfdede, grey);
-  z-index: 0;
+  -webkit-transition: width .3s, right .3s;
+  transition: width .3s, right .3s;
+}
+
+.nav__item:hover::after {
+  right: -5px;
+  width: 5px;
+}
+
+.nav__item:hover::before {
+  left: -5px;
+  width: 5px;
 }
 
 .header {
@@ -146,12 +168,56 @@ body {
 }
 
 section {
-  position: relative;
-  height: 500px;
-  background-color: yellow;
+  scroll-margin-top: 130px;
 }
 
-.two {
+.welcome {
+  position: relative;
+  width: 100%;
+  padding: 19rem 4rem 4rem;
+  background-color: #fcfdf8;
+}
+
+.welcome__box {
+  left: 0;
+  width: 100%;
+  padding: 2rem;
+  -webkit-box-shadow: 2px 5px 10px #525252;
+          box-shadow: 2px 5px 10px #525252;
+  border-radius: 8px;
+  z-index: 6;
+}
+
+.welcome__text {
+  position: relative;
+  font-size: 2rem;
+}
+
+.welcome__text--item1 {
+  font-size: 4rem;
+}
+
+.welcome__text--item1 span {
+  text-transform: capitalize;
+}
+
+.welcome__text--item2 {
+  font-style: italic;
+}
+
+.welcome__text--item2 span {
+  left: 50px;
+}
+
+.welcome__text--item3 {
+  width: 90%;
+  margin-top: 2rem;
+  text-align: right;
+  font-weight: bold;
+  font-size: 2.5rem;
+}
+
+.apps {
   position: relative;
   width: 100%;
   height: 500px;
