--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,20 @@
+@mixin navBtn {
+	position: absolute;
+	content: '';
+	top: 0;
+	width: 10px;
+	height: 100%;
+	background-image: linear-gradient(
+		rgb(218, 217, 217),
+		white,
+		white,
+		rgb(223, 222, 222),
+		grey
+	);
+}
+
+
+
 *,
 *::before,
 *::after {
@@ -82,42 +99,57 @@ body {
 	border-bottom: 2px solid black;
 	background-color: white;
 	&__items {
-		// position: relative;
-		// display: flex;
-		// width: 300px;
 		padding: 1rem 2rem;
-		// justify-content: space-between;
+		span{
+			transition: font-weight .5s;
+			text-transform: capitalize;
+		}
 	}
 
 	&__item {
 		position: relative;
 		text-decoration: none;
-		margin: 0  1rem;
-		background-image: linear-gradient( rgb(218, 217, 217), white, white,rgb(223, 222, 222), grey);
+		margin: 0 1rem;
+		background-image: linear-gradient(
+			rgb(218, 217, 217),
+			white,
+			white,
+			rgb(223, 222, 222),
+			grey
+		);
 		color: black;
 		font-size: 2rem;
+		
+	}
+
+	&__item:hover {
+		span{
+			font-weight: bold;
+		}
 	}
 
 	&__item::before {
-		position: absolute;
-		content: '';
-		top: 0;
 		left: -10px;
-		width: 10px;
-		height: 100%;
-		background-image: linear-gradient( rgb(218, 217, 217), white, white,rgb(223, 222, 222), grey);
-		z-index: 0;
+		@include navBtn();
+		transition: width .3s, left .3s;
 	}
 	&__item::after {
-		position: absolute;
-		content: '';
-		top: 0;
 		right: -10px;
-		width: 10px;
-		height: 100%;
-		background-image: linear-gradient( rgb(218, 217, 217), white, white,rgb(223, 222, 222), grey);
-		z-index: 0;
+		@include navBtn();
+		transition: width .3s, right .3s;
 	}
+	
+
+	&__item:hover::after {
+		right: -5px;
+		width: 5px;
+	}
+
+	&__item:hover::before {
+		left: -5px;
+		width: 5px;
+	}
+
 }
 
 .header {
@@ -126,21 +158,20 @@ body {
 	width: 100%;
 	height: 100px;
 	line-height: 100px;
-	
+
 	color: white;
 	background-color: rgb(0, 0, 0);
 	z-index: 4;
-	&__hero-img{
+	&__hero-img {
 		// position: absolute;
 		// display: flex;
-		p{
-		position: absolute;
-		left: 20px;
-		font-size: 7rem;
-			
+		p {
+			position: absolute;
+			left: 20px;
+			font-size: 7rem;
 		}
 	}
-	&__hero-title{
+	&__hero-title {
 		// justify-content: center;
 		text-align: center;
 		font-size: 6rem;
@@ -148,24 +179,63 @@ body {
 		span {
 			font-size: 3rem;
 		}
-
 	}
 }
 
 
 
 section {
-	// top: 200px;
-	position: relative;
-	height: 500px;
-	background-color: yellow;
+	scroll-margin-top: 130px;
 }
 
-.two {
+.welcome {
+	position: relative;
+	// top: 150px;
+	width: 100%;
+	// height: 500px;
+	padding: 19rem 4rem 4rem;
+	background-color: rgb(252, 253, 248);
+	&__box {
+
+		left: 0;
+		width: 100%;
+
+		padding: 2rem;
+		box-shadow: 2px 5px 10px rgb(82, 82, 82);
+		border-radius: 8px;
+		z-index: 6;
+	}
+
+	&__text {
+		position: relative;
+		font-size: 2rem;
+		
+
+		&--item1 {
+			font-size: 4rem;
+
+			span {
+				text-transform: capitalize;
+			}
+		}
+		&--item2 {
+			font-style: italic;
+			span {
+				left: 50px;
+			}
+		}
+		&--item3 {
+			width: 90%;
+			margin-top: 2rem;
+			text-align: right;
+			font-weight: bold;
+			font-size: 2.5rem;
+		}
+	}
+}
+.apps {
 	position: relative;
 	width: 100%;
 	height: 500px;
 	background-color: green;
 }
-
-
