--- a/css/main.css
+++ b/css/main.css
@@ -85,19 +85,25 @@ body {
 }
 
 .nav__items span {
-  -webkit-transition: font-weight .5s;
-  transition: font-weight .5s;
+  -webkit-transition: font-weight 0.5s;
+  transition: font-weight 0.5s;
   text-transform: capitalize;
 }
 
 .nav__item {
   position: relative;
-  text-decoration: none;
-  margin: 0 1rem;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#dad9d9), color-stop(white), color-stop(white), color-stop(#dfdede), to(grey));
-  background-image: linear-gradient(#dad9d9, white, white, #dfdede, grey);
+  margin: 0 2rem;
+  padding: .5rem;
+  -webkit-transition: background-color 1s;
+  transition: background-color 1s;
   color: black;
+  text-decoration: none;
   font-size: 2rem;
+}
+
+.nav__item:hover {
+  background-color: black;
+  color: white;
 }
 
 .nav__item:hover span {
@@ -113,8 +119,9 @@ body {
   height: 100%;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#dad9d9), color-stop(white), color-stop(white), color-stop(#dfdede), to(grey));
   background-image: linear-gradient(#dad9d9, white, white, #dfdede, grey);
-  -webkit-transition: width .3s, left .3s;
-  transition: width .3s, left .3s;
+  border: 1px solid #8b8989;
+  -webkit-transition: width 0.3s, left 0.3s;
+  transition: width 0.3s, left 0.3s;
 }
 
 .nav__item::after {
@@ -126,8 +133,9 @@ body {
   height: 100%;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#dad9d9), color-stop(white), color-stop(white), color-stop(#dfdede), to(grey));
   background-image: linear-gradient(#dad9d9, white, white, #dfdede, grey);
-  -webkit-transition: width .3s, right .3s;
-  transition: width .3s, right .3s;
+  border: 1px solid #8b8989;
+  -webkit-transition: width 0.3s, right 0.3s;
+  transition: width 0.3s, right 0.3s;
 }
 
 .nav__item:hover::after {
@@ -167,10 +175,6 @@ body {
   font-size: 3rem;
 }
 
-section {
-  scroll-margin-top: 130px;
-}
-
 .welcome {
   position: relative;
   width: 100%;
@@ -179,13 +183,12 @@ section {
 }
 
 .welcome__box {
-  left: 0;
+  position: relative;
   width: 100%;
   padding: 2rem;
   -webkit-box-shadow: 2px 5px 10px #525252;
           box-shadow: 2px 5px 10px #525252;
   border-radius: 8px;
-  z-index: 6;
 }
 
 .welcome__text {
@@ -215,12 +218,106 @@ section {
   text-align: right;
   font-weight: bold;
   font-size: 2.5rem;
+  font-style: italic;
 }
 
-.apps {
+.news {
   position: relative;
   width: 100%;
-  height: 500px;
-  background-color: green;
+  background-color: #e7e7e7;
+  padding: 1rem 4rem 4rem;
+}
+
+.news h2 {
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 300;
+}
+
+.news h2 span {
+  text-transform: uppercase;
+}
+
+.news .underline {
+  position: relative;
+  width: 380px;
+  height: 4px;
+  background-color: #060606;
+  border: transparent;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  margin-bottom: 3rem;
+}
+
+.news__box {
+  position: relative;
+  width: 100%;
+  background-color: #e7e7e7;
+}
+
+.news__cards {
+  position: relative;
+  width: 320px;
+  margin: 10px 10px;
+  -webkit-box-shadow: 3px 5px 10px black;
+          box-shadow: 3px 5px 10px black;
+  font-size: 2rem;
+}
+
+.news__cards--img {
+  position: relative;
+  left: 50%;
+  top: 20px;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  width: 90%;
+  aspect-ratio: calc(0.6);
+}
+
+.news__cards--name-one {
+  text-align: center;
+  margin: 30px auto 20px;
+}
+
+.news__cards--one {
+  background-color: white;
+}
+
+.news__cards--two {
+  background-color: white;
+}
+
+.news__cards--three {
+  background-color: white;
+}
+
+.news__cards--four {
+  background-color: white;
+}
+
+.news__cards--five {
+  background-color: white;
+}
+
+.news__cards--six {
+  background-color: white;
+}
+
+.news__cards--seven {
+  position: relative;
+  background-color: white;
+}
+
+.news__cards--seven img {
+  aspect-ratio: calc(1);
+}
+
+.footer {
+  position: relative;
+  background-color: white;
+  padding: 1rem;
+  text-align: center;
+  border-top: 1px solid black;
 }
 /*# sourceMappingURL=main.css.map */
