--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,7 +11,9 @@
 		rgb(223, 222, 222),
 		grey
 	);
+	border: 1px solid rgb(139, 137, 137);
 }
+
 
 
 
@@ -100,30 +102,33 @@ body {
 	background-color: white;
 	&__items {
 		padding: 1rem 2rem;
-		span{
-			transition: font-weight .5s;
+		span {
+			transition: font-weight 0.5s;
 			text-transform: capitalize;
 		}
 	}
 
 	&__item {
 		position: relative;
-		text-decoration: none;
-		margin: 0 1rem;
-		background-image: linear-gradient(
-			rgb(218, 217, 217),
-			white,
-			white,
-			rgb(223, 222, 222),
-			grey
-		);
-		color: black;
-		font-size: 2rem;
-		
+		margin: 0 2rem;
+		padding: .5rem;
+		// background-image: linear-gradient(
+		// 	rgb(218, 217, 217),
+		// 	white,
+		// 	white,
+		// 	rgb(223, 222, 222),
+		// 	grey
+		// 	);
+		transition: background-color 1s;
+			color: black;
+			text-decoration: none;
+			font-size: 2rem;
 	}
 
 	&__item:hover {
-		span{
+		background-color: rgb(0, 0, 0);
+		color: white;
+		span {
 			font-weight: bold;
 		}
 	}
@@ -131,14 +136,13 @@ body {
 	&__item::before {
 		left: -10px;
 		@include navBtn();
-		transition: width .3s, left .3s;
+		transition: width 0.3s, left 0.3s;
 	}
 	&__item::after {
 		right: -10px;
 		@include navBtn();
-		transition: width .3s, right .3s;
+		transition: width 0.3s, right 0.3s;
 	}
-	
 
 	&__item:hover::after {
 		right: -5px;
@@ -149,7 +153,6 @@ body {
 		left: -5px;
 		width: 5px;
 	}
-
 }
 
 .header {
@@ -169,6 +172,7 @@ body {
 			position: absolute;
 			left: 20px;
 			font-size: 7rem;
+
 		}
 	}
 	&__hero-title {
@@ -182,10 +186,8 @@ body {
 	}
 }
 
-
-
 section {
-	scroll-margin-top: 130px;
+	// scroll-margin-top: 130px;
 }
 
 .welcome {
@@ -196,20 +198,20 @@ section {
 	padding: 19rem 4rem 4rem;
 	background-color: rgb(252, 253, 248);
 	&__box {
+		// position: absolute;
+		position: relative;
 
-		left: 0;
+		// left: 0;
 		width: 100%;
-
+		// background-color: lightgray;
 		padding: 2rem;
 		box-shadow: 2px 5px 10px rgb(82, 82, 82);
 		border-radius: 8px;
-		z-index: 6;
 	}
 
 	&__text {
 		position: relative;
 		font-size: 2rem;
-		
 
 		&--item1 {
 			font-size: 4rem;
@@ -230,12 +232,108 @@ section {
 			text-align: right;
 			font-weight: bold;
 			font-size: 2.5rem;
+			font-style: italic;
 		}
 	}
 }
-.apps {
+
+.news {
 	position: relative;
 	width: 100%;
-	height: 500px;
-	background-color: green;
+	// height: 400px;
+	background-color: rgb(231, 231, 231);
+	padding: 1rem 4rem 4rem;
+
+	h2 {
+		text-align: center;
+		font-size: 4rem;
+		font-weight: 300;
+
+		span {
+			text-transform: uppercase;
+		}
+	}
+
+	.underline {
+		position: relative;
+		width: 380px;
+		height: 4px;
+		background-color: rgb(6, 6, 6);
+		border: transparent;
+		left: 50%;
+		transform: translate(-50%);
+		margin-bottom: 3rem;
+	}
+
+	&__box {
+		// display: flex;
+		position: relative;
+		width: 100%;
+		// height: 350px;
+		// justify-content: space-around;
+		background-color: rgb(231, 231, 231);
+		// box-shadow: 0 0 5px;
+	}
+	&__cards {
+		position: relative;
+		width: 320px;
+		// height: 330px;
+		margin: 10px 10px;
+		// padding: 10px;
+		box-shadow: 3px 5px 10px black;
+		font-size: 2rem;
+		&--img {
+			position: relative;
+			left: 50%;
+			top: 20px;
+			transform: translate(-50%);
+			width: 90%;
+			aspect-ratio:calc(0.6);
+			
+			
+		}
+		
+		&--name-one {
+			text-align: center;
+			margin: 30px auto 20px;
+		}
+
+		&--one {
+			background-color: white;
+		}
+		&--two {
+			background-color: white;
+		}
+		&--three {
+			background-color: white;
+		}
+		&--four {
+			background-color: white;
+		}
+		&--five {
+			background-color: white;
+		}
+		&--six {
+			background-color: white;
+		}
+		&--seven {
+			position: relative;
+			background-color: white;
+			img {
+				aspect-ratio:calc(1);
+			}
+		}
+		
+	}
+}
+
+
+
+.footer {
+	position: relative;
+	background-color: white;
+	padding: 1rem;
+	text-align: center;
+	border-top: 1px solid black;
+	
 }
