--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,21 +1,4 @@
-@mixin navBtn {
-	position: absolute;
-	content: '';
-	top: 0;
-	width: 10px;
-	height: 100%;
-	background-image: linear-gradient(
-		rgb(218, 217, 217),
-		white,
-		white,
-		rgb(223, 222, 222),
-		grey
-	);
-	border: 1px solid rgb(139, 137, 137);
-}
-
-
-
+@import './animations';
 
 *,
 *::before,
@@ -31,6 +14,7 @@ html {
 }
 
 body {
+	// position: relative;
 	font-family: 'Titillium Web', sans-serif;
 	font-size: 1.6rem;
 }
@@ -93,6 +77,7 @@ body {
 }
 
 .nav {
+	display: none;
 	position: fixed;
 	top: 105px;
 	width: 100%;
@@ -110,19 +95,12 @@ body {
 
 	&__item {
 		position: relative;
-		margin: 0 2rem;
-		padding: .5rem;
-		// background-image: linear-gradient(
-		// 	rgb(218, 217, 217),
-		// 	white,
-		// 	white,
-		// 	rgb(223, 222, 222),
-		// 	grey
-		// 	);
+		margin: 0 1rem;
+		padding: 0.5rem;
 		transition: background-color 1s;
-			color: black;
-			text-decoration: none;
-			font-size: 2rem;
+		color: black;
+		text-decoration: none;
+		font-size: 2rem;
 	}
 
 	&__item:hover {
@@ -132,26 +110,27 @@ body {
 			font-weight: bold;
 		}
 	}
+}
 
-	&__item::before {
-		left: -10px;
-		@include navBtn();
-		transition: width 0.3s, left 0.3s;
-	}
-	&__item::after {
-		right: -10px;
-		@include navBtn();
-		transition: width 0.3s, right 0.3s;
+.nav-mobile {
+	position: fixed;
+	left: -105%;
+	 top: 100px;
+	// top: 130;
+	width: 100%;
+	height: 200px;
+	background-color: white;
+	z-index: 5;
+
+	&__items {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		border: 2px solid black;
 	}
 
-	&__item:hover::after {
-		right: -5px;
-		width: 5px;
-	}
-
-	&__item:hover::before {
-		left: -5px;
-		width: 5px;
+	&--active {
+		left: 0;
 	}
 }
 
@@ -168,34 +147,35 @@ body {
 	&__hero-img {
 		// position: absolute;
 		// display: flex;
+		padding-left: 5%;
 		p {
+			display: none;
 			position: absolute;
 			left: 20px;
 			font-size: 7rem;
-
+			animation: moveApple 20s infinite linear;
 		}
 	}
 	&__hero-title {
 		// justify-content: center;
-		text-align: center;
-		font-size: 6rem;
+		text-align: left;
+
 		letter-spacing: 3px;
+		font-size: 4rem;
 		span {
-			font-size: 3rem;
+			font-size: 1.6rem;
 		}
 	}
 }
 
-section {
-	// scroll-margin-top: 130px;
-}
+
 
 .welcome {
 	position: relative;
 	// top: 150px;
 	width: 100%;
 	// height: 500px;
-	padding: 19rem 4rem 4rem;
+	padding: 16rem 4rem 6rem;
 	background-color: rgb(252, 253, 248);
 	&__box {
 		// position: absolute;
@@ -214,7 +194,7 @@ section {
 		font-size: 2rem;
 
 		&--item1 {
-			font-size: 4rem;
+			font-size: 3.5rem;
 
 			span {
 				text-transform: capitalize;
@@ -246,7 +226,7 @@ section {
 
 	h2 {
 		text-align: center;
-		font-size: 4rem;
+		font-size: 3.5rem;
 		font-weight: 300;
 
 		span {
@@ -257,7 +237,7 @@ section {
 	.underline {
 		position: relative;
 		width: 380px;
-		height: 4px;
+		height: 2px;
 		background-color: rgb(6, 6, 6);
 		border: transparent;
 		left: 50%;
@@ -288,11 +268,9 @@ section {
 			top: 20px;
 			transform: translate(-50%);
 			width: 90%;
-			aspect-ratio:calc(0.6);
-			
-			
+			aspect-ratio: calc(0.6);
 		}
-		
+
 		&--name-one {
 			text-align: center;
 			margin: 30px auto 20px;
@@ -320,14 +298,11 @@ section {
 			position: relative;
 			background-color: white;
 			img {
-				aspect-ratio:calc(1);
+				aspect-ratio: calc(1);
 			}
 		}
-		
 	}
 }
-
-
 
 .footer {
 	position: relative;
@@ -335,5 +310,55 @@ section {
 	padding: 1rem;
 	text-align: center;
 	border-top: 1px solid black;
-	
+}
+
+// ========================
+// MEDIA
+// ========================
+
+@media (min-width: 768px) {
+	.header {
+		&__hero-img {
+			padding-left: 0;
+			p {
+				display: block;
+			}
+
+			span {
+				font-size: 3rem;
+			}
+		}
+		&__hero-title {
+			font-size: 6rem;
+			text-align: center;
+		}
+	}
+
+	.nav {
+		display: block;
+	}
+
+	.burger-btn {
+		display: none;
+	}
+
+	&__text {
+		&--item1 {
+			font-size: 4rem;
+		}
+	}
+
+	.welcome {
+		padding: 24rem 4rem 16rem;
+	}
+
+	.news {
+		h2 {
+			font-size: 4rem;
+		}
+
+		.underline {
+			height: 4px;
+		}
+	}
 }
