--- a/Zapas/main.scss
+++ b/Zapas/main.scss
@@ -1,7 +1,6 @@
 @import './animations';
 
-$apps_panel_height: 400px;
-$apps_page_height: 300px;
+$card_page_two_delta: 450px;
 $app_color: #f7f7f7;
 
 *,
@@ -338,292 +337,227 @@ body {
 	background-color: black;
 }
 
-.collection {
-	padding: 18rem 0 2rem;
-	text-align: center;
-
-	h1 {
-		font-size: 4rem;
-		font-weight: 200;
-	}
-}
-
 .apps {
-	position: relative;
-	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	// position: relative;
+	padding: 18rem 0 2rem;
+	// text-align: center;
+	align-items: center;
+	// height: 95vh;
 
-	&__panel {
-		position: relative;
-		height: $apps_panel_height;
-		padding: 5rem 4rem;
+		h1 {
+			font-size: 4rem;
+			font-weight: 200;
+		}
+
+	&__app-all {
+		padding: 5rem 1rem;
 		overflow: hidden;
 	}
 
-	&__panel:nth-child(even) {
-		background-color: rgb(226, 222, 222);
+	&__app-one {
+		// background-color: #fcfdf8;
 	}
-	&__panel:nth-child(odd) {
-		background-color: rgb(243, 243, 243);
+	
+	&__app-two {
+		background-color: $app_color;
 	}
 
-	&__description-left {
+	
+
+	&__app-four {
+		background-color: $app_color;
+	}
+
+	
+
+	&__card {
 		position: relative;
-
-		width: 250px;
-		height: $apps_page_height;
-		margin: 0 2rem 1rem 0;
-		float: left;
-		background-color: yellow;
-		z-index: 1;
-	}
-
-	&__description-left:hover &__page-one {
-		transform: translateY(300px);
-	}
-
-	&__page-one {
-		position: absolute;
-		width: 250px;
-		height: $apps_page_height;
+		width: 240px;
+		height: 520px;
 		padding: 2rem;
-
+		float: left;
+		margin-right: 5rem;
+		box-shadow: 3px 3px 10px grey;
 		background-color: white;
-		box-shadow: 2px 2px 8px grey;
-		transition: transform 1s;
-		z-index: 2;
+		// z-index: 10;
+		// opacity: 0;
 	}
 
-	&__page-one-img {
-		position: relative;
-		// width: 220px;
-		height: 220px;
-		// padding: 2rem;
-		margin-bottom: 3rem;
-		background-image: url('/img/AMB_120a.png');
-		background-position: center;
-		background-size: cover;
+
+
+	.underline-long {
+		margin: 2rem auto ;
+		// right: 0;
+		width: 200px;
+		margin-right: 30rem;
 	}
 
-	&__page-two {
-		position: absolute;
-		z-index: 1;
+
+
+
+	&__card-one {
+		// position: relative;
+		// float: left;
+		// margin-right: 5rem;
 	}
 
-	&__specification-table {
-		list-style-type: none;
+	&__cards {
+		display: flex;
+		// position: relative;
+		flex-wrap: wrap;
+		// justify-content: space-between;
+		padding: 0 1rem;
 	}
 
-	// &__page-three {
-	// 	position: absolute;
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	background-color: transparent;
-	// 	z-index: 5;
+	// &__cards:nth-child(even) {
+	// 	background-color: red;
 	// }
 
+	&__cards-img {
+		// position: relative;
+		// left: 0;
+		// right: 0;
+		// width: 100%;
+		height: 50%;
+		// margin-bottom: 2rem;
 
-	&__description-right {
+		background-position: center;
+		background-size: cover;
+		&--one {
+			background-image: url('../img/AMB_120a.png');
+
+		}
+		&--two {
+			background-image: url('../img/Ikona_ambus.png');
+
+		}
+		&--three {
+			background-image: url('../img/SafeRoad_114.png');
+
+		}
+	}
+
+	&__cards-title {
+		// position: absolute;
+		border-top-right-radius: 0;
+		padding: 1rem;
+		// height: 50%;
+		margin-top: 19rem;
+		text-align: center;
+		
+	}
+
+	&__cards-page-one {
+		display: flex;
+		flex-direction: column;
+		// color: red;
+		// position: absolute;
+		// top: 0;
+		// left: 0;
+		width: 200px;
+		height: 500px;
+		// margin-top: 8rem;
+		background-color: white;
+		transition: transform 0.8s;
+		// align-items: center;
+		// z-index: 60;
+	}
+
+	&__cards-page-two {
+		position: absolute;
+		top: 0;
+		left: 50%;
+		transform: translate(-50%);
+		padding: 2rem;
+		opacity: 0;
+		transition: opacity .8s;
+		background-color: white;
+		// z-index: -1;
+		
+	}
+
+	&__cards-text {
 		position: relative;
-		background-color: transparent;
-		z-index: 0;
+		width: 200px;
+		height: 460px;
+		padding: 0 1rem;
+		// position: relative;
+		// align-items: center;
+		// font-size: 1.2rem;
+		// background: transparent;
+		p {
+			text-align: center;
+			margin-bottom: 1rem;
+			font-weight: bold;
+			font-size: 2rem;
+		}
+		ul {
+			// background: transparent;
+			list-style-type: none;
+			text-align: left;
+			margin-top: 2rem;
+
+			li {
+				margin-bottom: 1rem;
+			}
+			// align-items: center;
+		}
+	}
+
+	&__cards-info {
+		// width: 100%;
+		height: 100%;
+		resize: none;
+		border: none;
+		color: black;
+		font-size: 1.4rem;
+	}
+
+	
+
+	&__card-one:hover &__cards-page-one {
+		transform: translateY($card_page_two_delta);
+	}
+	// &__card-one: &__cards-page-one {
+	// 	transform: translateY($card_page_two_delta);
+	// } mouse out
+
+	&__card-one:hover &__cards-text {
+		opacity: 1;
+	}
+	// &__card-one:hover &__cards-page-two {
+	// 	opacity: 1;
+	// }
+
+	&__card-two:hover &__cards-page-one {
+		transform: translateY($card_page_two_delta);
+	}
+	&__card-two:hover &__cards-page-two {
+		opacity: 1;
+	}
+
+	&__card-three:hover &__cards-page-one {
+		transform: translateY($card_page_two_delta);
+	}
+	&__card-three:hover &__cards-page-two {
+		opacity: 1;
+	}
+
+	&__card-four:hover &__cards-page-one {
+		transform: translateY($card_page_two_delta);
+	}
+	&__card-four:hover &__cards-page-two {
+		opacity: 1;
+	}
+	&__card-five:hover &__cards-page-one {
+		transform: translateY($card_page_two_delta);
+	}
+	&__card-five:hover &__cards-page-two {
+		opacity: 1;
 	}
 }
-
-// &__app-all {
-// 	padding: 5rem 1rem;
-// 	overflow: hidden;
-// }
-
-// &__app-one {
-// 	// background-color: #fcfdf8;
-// }
-
-// &__app-two {
-// 	background-color: $app_color;
-// }
-
-// &__app-four {
-// 	background-color: $app_color;
-// }
-
-// &__card {
-// 	position: relative;
-// 	width: 240px;
-// 	height: 520px;
-// 	padding: 2rem;
-// 	float: left;
-// 	margin-right: 5rem;
-// 	box-shadow: 3px 3px 10px grey;
-// 	background-color: white;
-// 	// z-index: 10;
-// 	// opacity: 0;
-// }
-
-// .underline-long {
-// 	margin: 2rem auto ;
-// 	// right: 0;
-// 	width: 200px;
-// 	margin-right: 30rem;
-// }
-
-// &__card-one {
-// 	// position: relative;
-// 	// float: left;
-// 	// margin-right: 5rem;
-// }
-
-// &__cards {
-// 	display: flex;
-// 	// position: relative;
-// 	flex-wrap: wrap;
-// 	// justify-content: space-between;
-// 	padding: 0 1rem;
-// }
-
-// &__cards:nth-child(even) {
-// 	background-color: red;
-// }
-
-// &__cards-img {
-// 	// position: relative;
-// 	// left: 0;
-// 	// right: 0;
-// 	// width: 100%;
-// 	height: 50%;
-// 	// margin-bottom: 2rem;
-
-// 	background-position: center;
-// 	background-size: cover;
-// 	&--one {
-// 		background-image: url('../img/AMB_120a.png');
-
-// 	}
-// 	&--two {
-// 		background-image: url('../img/Ikona_ambus.png');
-
-// 	}
-// 	&--three {
-// 		background-image: url('../img/SafeRoad_114.png');
-
-// 	}
-// }
-
-// &__cards-title {
-// 	// position: absolute;
-// 	border-top-right-radius: 0;
-// 	padding: 1rem;
-// 	// height: 50%;
-// 	margin-top: 19rem;
-// 	text-align: center;
-
-// }
-
-// &__cards-page-one {
-// 	display: flex;
-// 	flex-direction: column;
-// 	// color: red;
-// 	// position: absolute;
-// 	// top: 0;
-// 	// left: 0;
-// 	width: 200px;
-// 	height: 500px;
-// 	// margin-top: 8rem;
-// 	background-color: white;
-// 	transition: transform 0.8s;
-// 	// align-items: center;
-// 	// z-index: 60;
-// }
-
-// &__cards-page-two {
-// 	position: absolute;
-// 	top: 0;
-// 	left: 50%;
-// 	transform: translate(-50%);
-// 	padding: 2rem;
-// 	opacity: 0;
-// 	transition: opacity .8s;
-// 	background-color: white;
-// 	// z-index: -1;
-
-// }
-
-// &__cards-text {
-// 	position: relative;
-// 	width: 200px;
-// 	height: 460px;
-// 	padding: 0 1rem;
-// 	// position: relative;
-// 	// align-items: center;
-// 	// font-size: 1.2rem;
-// 	// background: transparent;
-// 	p {
-// 		text-align: center;
-// 		margin-bottom: 1rem;
-// 		font-weight: bold;
-// 		font-size: 2rem;
-// 	}
-// 	ul {
-// 		// background: transparent;
-// 		list-style-type: none;
-// 		text-align: left;
-// 		margin-top: 2rem;
-
-// 		li {
-// 			margin-bottom: 1rem;
-// 		}
-// 		// align-items: center;
-// 	}
-// }
-
-// &__cards-info {
-// 	// width: 100%;
-// 	height: 100%;
-// 	resize: none;
-// 	border: none;
-// 	color: black;
-// 	font-size: 1.4rem;
-// }
-
-// &__card-one:hover &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// }
-// &__card-one: &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// } mouse out
-
-// &__card-one:hover &__cards-text {
-// 	opacity: 1;
-// }
-// &__card-one:hover &__cards-page-two {
-// 	opacity: 1;
-// }
-
-// &__card-two:hover &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// }
-// &__card-two:hover &__cards-page-two {
-// 	opacity: 1;
-// }
-
-// &__card-three:hover &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// }
-// &__card-three:hover &__cards-page-two {
-// 	opacity: 1;
-// }
-
-// &__card-four:hover &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// }
-// &__card-four:hover &__cards-page-two {
-// 	opacity: 1;
-// }
-// &__card-five:hover &__cards-page-one {
-// 	transform: translateY($card_page_two_delta);
-// }
-// &__card-five:hover &__cards-page-two {
-// 	opacity: 1;
-// }
 
 .footer {
 	position: relative;
@@ -664,14 +598,14 @@ body {
 		display: none;
 	}
 
-	
+	&__text {
+		&--item1 {
+			font-size: 4rem;
+		}
+	}
+
 	.welcome {
 		padding: 28rem 4rem 14rem;
-		&__text {
-			&--item1 {
-				font-size: 4rem;
-			}
-		}
 	}
 
 	.news {
